<!--
  ~ Copyright (c) 2022 Michael Belivanakis a.k.a. MikeNakis, michael.gr
  ~
  ~ This software is explicitly published under NO LICENSE. ("No permission" license.)
  ~ This means that you may not do anything with this software other than view the code and admire it.
  ~ (Even if you fork it, you may not do anything with the forked code other than view it and admire it.)
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>mikenakis</groupId>
	<artifactId>public-parent</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<url>https://github.com/mikenakis/Public</url>

	<licenses>
		<license>
			<name>No Permission License - All Rights Reserved</name>
			<url>https://choosealicense.com/no-permission/</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Mike Nakis</name>
			<email>pom.xml@michael.gr</email>
			<organization>michael.gr</organization>
			<organizationUrl>http://michael.gr</organizationUrl>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>19</maven.compiler.source>
		<maven.compiler.target>19</maven.compiler.target>
	</properties>

	<modules>
		<module>allocation</module>
		<module>benchmark</module>
		<module>buffer</module>
		<module>bytecode</module>
		<module>classdump</module>
		<module>clio</module>
		<module>coherence</module>
		<module>intertwine</module>
		<module>java-type-model</module>
		<module>kit</module>
		<module>lifetime</module>
		<module>slf4j-to-kit</module>
		<module>publishing</module>
		<module>starwars-dataset</module>
		<module>testana</module>
		<module>testkit</module>
		<module>tyraki</module>
	</modules>

	<build>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>

					<compilerArgs>

						<!-- The "enable-preview" option "Enables preview features of the JVM". Since home projects of mine are all about experimentation, we want this. -->
						<arg>--enable-preview</arg>

						<!-- The "-parameters" option "Generates metadata for reflection on method parameters." That's good, we want this. -->
						<arg>-parameters</arg>

						<!-- If there are any warnings, we want compilation to fail. I pity all those who a) don't have as many as possible warnings enabled, and b) don't have
						     their build configured to treat warnings as errors. -->
						<arg>-Werror</arg>

						<!-- The "-Xlint" option enables all recommended warnings. We will then suppress some that we have no use for. -->
						<arg>-Xlint</arg>

						<!-- The "preview" sub-option of the "Xlint" option will generate a warning for each use of a preview feature.  Since we are explicitly enabling preview
						     features using the "enable-preview" compiler argument, this sub-option is entirely useless, so we disable it. -->
						<arg>-Xlint:-preview</arg>

						<!-- The "try" sub-option of the "Xlint" option is mind-bogglingly stupid.
							It lives in a simplistic world in which resources are always created, used, and disposed within a single function, so it aims to warn you that you
							forgot to dispose of a resource within the function that created it.
							The following possibilities never occurred to the mastermind who invented this option:
							- You might invoke a function which creates a resource and returns it, to be used and of course disposed by the caller.
							- You might create a resource and store it as a member variable of an object, which will of course dispose the resource when it gets disposed.
							So, the only reasonable thing to do with this warning is to always keep it disabled. -->
						<arg>-Xlint:-try</arg>

						<!-- The "serial" sub-option of the "Xlint" option "Warns about missing serialVersionUID definitions on serializable classes".
						    In other words, every single time you extend some predefined class, you will be hit with an annoying warning just because the class you are extending
						    happens to be serializable, a feature which you usually have no use for, don't care about, and don't want to be bothered with. -->
						<arg>-Xlint:-serial</arg>

						<!-- PEARL: When the packaging is 'jar', IntellijIdea creates a "target/generated-sources/annotations" directory in our source tree each time we build.
							 IntellijIdea insists on doing this, despite the fact that:
							 - We have specified that we do not want any annotation processing to take place. (In this case, the directory still gets created, and is empty.)
							 - We have specified that our output folder is something other than 'target'. (IntellijIdea will nonetheless create a directory called 'target'.)
							 This is related to some other very strange behavior of IntellijIdea: if you go to Settings... / Build, Execution, Deployment / Compiler / Annotation
							 Processors you will find that the 'Enable annotation processing' checkbox is unchecked. However, as it turns out, this only applies to the mysterious,
							 nonsensical 'Default' branch of the mysterious, nonsensical tree that appears to the left of the checkbox. If you scroll down that tree, you will
							 discover that there are more branches, and for those branches 'Enable annotation processing' is checked, and the "target/generated-sources/annotations"
							 directory is specified. I have no idea how or why IntellijIdea creates those branches, and why it configures them like that. The only way I have found
							 to prevent all that nonsense from affecting the directories created is by explicitly disabling annotation processing here, with -proc:none.
							 PEARL on PEARL: the use of this option causes the following message to appear in the build window of IntellijIdea:
							   java: User-specified option "-proc:none" is ignored for "<project>". This compilation parameter is set automatically according to project settings.
							 Still, I would rather have this silly warning appear during build, than have weird empty extra target folders created.
							 - Note that the 'java:' prefix suggests that this message is issued by the java compiler, while in fact it is issued by IntellijIdea.
							 - Note that -Xlint:-processing does not help at all in suppressing this warning.
							 - Note that contrary to what the warning message says, the -proc:none option is not ignored, because the annoying directories are not created.	-->
						<arg>-proc:none</arg>

					</compilerArgs>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M6</version>
				<configuration>
					<!-- PEARL: maven-surefire-plugin stack trace trimming
					            When an exception is thrown by the tests, the maven-surefire-plugin will only show the top frame from the exception stack trace, which is
					            an entirely unwarranted and completely counter-productive thing to do. The following magical incantation reverses this behavior. -->
					<trimStackTrace>false</trimStackTrace>
					<!-- PEARL: maven-surefire-plugin "inclusions" and "exclusions"
						        The maven-surefire-plugin has some entirely useless concepts of "inclusions" and "exclusions", and the defaults are such that absolutely none of
						        your tests will run unless they adhere to a certain secret convention, which is that the class name must contain the word "Test".
								We correct this problem here by annihilating the plugin's concept of inclusions. -->
					<includes>
						<include>**/*.java</include>
					</includes>
					<!-- PEARL: maven-surefire-plugin file encoding
								The maven-surefire-plugin for some reason has to be told what the encoding is separately, otherwise tests that contain unicode characters will fail
								 despite the fact that the project.build.sourceEncoding property has been set to UTF8. See https://stackoverflow.com/a/17671104/773113 -->
					<!-- PEARL: The maven-surefire-plugin must be told separately that JDK preview features are enabled, dog knows why. -->
					<argLine>-Dfile.encoding=${project.build.sourceEncoding} --enable-preview</argLine>
					<!-- magical incantation needed for the enable-preview option to work, from https://stackoverflow.com/a/69754577/773113 -->
					<reuseForks>true</reuseForks>
					<useFile>false</useFile>
					<!-- PEARL: Maven crashes with "org.apache.maven.surefire.booter.SurefireBooterForkException: The forked VM terminated without properly saying goodbye. VM crash
					            or System.exit called?" The following is intended to fix that, See https://stackoverflow.com/a/33757854/773113 -->
<!--					<forkCount>1</forkCount>-->
<!--					<argLine>-Xmx8192m</argLine>-->
				</configuration>
			</plugin>

		</plugins>
	</build>

	<repositories>
		<repository>
			<id>repsy-mikenakis-public</id>
			<url>https://repo.repsy.io/mvn/mikenakis/mikenakis-public</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>repsy-mikenakis-public</id>
			<url>https://repo.repsy.io/mvn/mikenakis/mikenakis-public</url>
		</repository>
		<snapshotRepository>
			<id>repsy-mikenakis-public</id>
			<url>https://repo.repsy.io/mvn/mikenakis/mikenakis-public</url>
		</snapshotRepository>
	</distributionManagement>

</project>
